--- a/pages/index.html
+++ b/pages/index.html
@@ -89,7 +89,7 @@
 			</div>
 			<div class='flex items-center gap-8 text-white lg:gap-4 sm:hidden md:hidden'>
 				<ul>
-					<li><a class='grid place-items-center gap-y-2 text-sm' href='favourites.html'><img class='w-7' src="/assets/images/menu/favorites.svg" alt="">Избранное</a></li>
+					<li><a class='grid place-items-center gap-y-2 text-sm' href='favorites.html'><img class='w-7' src="/assets/images/menu/favorites.svg" alt="">Избранное</a></li>
 				</ul>
 				<ul>
 					<li><a class='grid place-items-center gap-y-2 text-sm' href='orders.html'><img class='w-7' src="/assets/images/menu/box.svg" alt="">Заказы</a></li>
@@ -108,9 +108,9 @@
 		</nav>
 		<nav class='hidden container items-center fixed bottom-0 bg-white justify-between py-3 md:flex sm:text-xs'>
 			<button class='grid place-items-center gap-y-2' id="dropdownDefaultButton" data-dropdown-toggle="dropdown"><img class='w-7 h-7' src="/assets/images/menu/redBars.svg" alt=""><span>Каталог</span></button>
-			<a class='grid place-items-center gap-y-2' href='#'><img class='w-7 h-7' src="/assets/images/menu/BlackFavorites.svg" alt="">Избранное</a>
-			<a class='grid place-items-center gap-y-2' href='#'><img class='w-7 h-7' src="/assets/images/menu/BlackBox.svg" alt="">Заказы</a>
-			<a class='grid place-items-center gap-y-2' href='#'><img class='w-7 h-7' src="/assets/images/menu/Blackshopping-cart.svg" alt=""><span class='absolute py-[2px] px-[6px] bottom-12 ml-10 text-xs rounded-full bg-red-600 text-white'>1</span>Корзина</a>
+			<a class='grid place-items-center gap-y-2' href='favorites.html'w-7 h-7' src="/assets/images/menu/BlackFavorites.svg" alt="">Избранное</a>
+			<a class='grid place-items-center gap-y-2' href='orders.html'><img class='w-7 h-7' src="/assets/images/menu/BlackBox.svg" alt="">Заказы</a>
+			<a class='grid place-items-center gap-y-2' href='cart.html'><img class='w-7 h-7' src="/assets/images/menu/Blackshopping-cart.svg" alt=""><span class='absolute py-[2px] px-[6px] bottom-12 ml-10 text-xs rounded-full bg-red-600 text-white'>1</span>Корзина</a>
 			<div>
 				<img class='w-14 min-w-[56px] rounded-full' src="/assets/images/userPhoto.jpg" alt="">
 			</div>
@@ -120,7 +120,7 @@
 	<main>
 		<section id='main' class='sm:mb-36'>
 			<div class='container'>
-				<h1 class='font-semibold text-[#414141] text-5xl mt-[120px] mb-[35px] sm:mt-15'>Каталог</h1>
+				<h1 class='font-semibold text-[#414141] text-5xl mt-36 mb-16 sm:mt-15'>Каталог</h1>
 				<div class='grid grid-cols-4 grid-flow-row gap-8 sm:grid-cols-2 md:grid-cols-3 md:mb-32 lg:grid-cols-3'>
 					<div class='col-span-2 relative '>
 						<div class='bg-gradient-to-t from-mainColorRed rounded-md'>
