--- a/pages/not-found.html
+++ b/pages/not-found.html
@@ -88,7 +88,7 @@
 				</div>
 				<div class='flex items-center gap-8 text-white lg:gap-4 sm:hidden md:hidden'>
 					<ul>
-						<li><a class='grid place-items-center gap-y-2 text-sm' href='favourites.html'><img class='w-7' src="/assets/images/menu/favorites.svg" alt="">Избранное</a></li>
+						<li><a class='grid place-items-center gap-y-2 text-sm' href='favorites.html'><img class='w-7' src="/assets/images/menu/favorites.svg" alt="">Избранное</a></li>
 					</ul>
 					<ul>
 						<li><a class='grid place-items-center gap-y-2 text-sm' href='orders.html'><img class='w-7' src="/assets/images/menu/box.svg" alt="">Заказы</a></li>
