--- a/pages/cart.html
+++ b/pages/cart.html
@@ -82,14 +82,14 @@
 			<!--  -->
 			<form>
 				<div class='relative'>
-					<input class="pl-4 pr-12 lg:pr-8 py-3 text-md text-gray-900 border border-gray-300 rounded-md bg-gray-50 md:pr-16 focus:ring-blue-500 focus:border-blue-500 w-96 lg:w-80 md:w-96 sm:w-60" type="search" id='default-search' placeholder='Найти товар' required>
+					<input class="pl-4 pr-12 lg:pr-8 py-3 text-md text-gray-900 border border-gray-300 rounded-md bg-gray-50 md:pr-16 focus:ring-blue-500 focus:border-blue-500 w-96 lg:w-64 md:w-96 sm:w-60" type="search" id='default-search' placeholder='Найти товар' required>
 					<button class="text-white absolute right-2.5 bottom-3 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium" type='submit'><img src="/assets/images/menu/search.svg" alt=""></button>
 				</div>
 			</form>
 			</div>
 			<div class='flex items-center gap-8 text-white lg:gap-4 sm:hidden md:hidden'>
 				<ul>
-					<li><a class='grid place-items-center gap-y-2 text-sm' href='favourites.html'><img class='w-7' src="/assets/images/menu/favorites.svg" alt="">Избранное</a></li>
+					<li><a class='grid place-items-center gap-y-2 text-sm' href='favorites.html'><img class='w-7' src="/assets/images/menu/favorites.svg" alt="">Избранное</a></li>
 				</ul>
 				<ul>
 					<li><a class='grid place-items-center gap-y-2 text-sm' href='orders.html'><img class='w-7' src="/assets/images/menu/box.svg" alt="">Заказы</a></li>
@@ -135,66 +135,96 @@
 				<button class='text-[#606060] mr-7'>Выбрать все</button>
 				<button class='text-mainColorRed'>Удалить выбранные</button>
 			</div>
-			<div class='flex justify-between'>
+			<div class='flex justify-between md:flex-col'>
 				<!-- cards -->
 				<div class='grid gap-y-8'>
 				<!-- card -->
-				<div class='relative flex items-center justify-between bg-white p-3 rounded-md shadow-md'>
+				<div class='relative flex items-center justify-between bg-white p-3 rounded-md shadow-md sm:flex-col'>
 					<div class=''>
 						<input class='w-8 h-8 absolute top-[-8px]' type="checkbox">
 						<div class='flex'>
 						<img class='mr-2 h-full w-24 shadow-md rounded-md' src="/assets/images/cart/imgProduct.jpg" alt="">
 							<div class='grid gap-y-2 max-w-lg'>
-								<h2 class='text-[#414141] text-2xl'>Комбайн КЗС-1218 «ДЕСНА-ПОЛЕСЬЕ GS12»Комбайн КЗС-1218 «ДЕСНА-ПОЛЕСЬЕ GS12»</h2>
+								<h2 class='text-[#414141] text-2xl sm:text-base'>Комбайн КЗС-1218 «ДЕСНА-ПОЛЕСЬЕ GS12»Комбайн КЗС-1218 «ДЕСНА-ПОЛЕСЬЕ GS12»</h2>
 								<div class='flex gap-6'>
 									<b>44,50 <span>&#8381;</span></b>
 									<p class='text-[#606060]'>50,50 <span>&#8381;</span> за шт.</p>
 								</div>
 							</div>
 						</div>
-						<div class='flex mt-4 items-center gap-8'>
+						<div class='flex mt-4 items-center gap-8 sm:hidden'>
+							<button class='border-2 border-mainColorRed rounded-md text-mainColorRed px-7 py-2'>Удалить</button>
+							<button class='border-2 border-transparent bg-mainColorRed rounded-md text-white px-7 py-2 hover:bg-white hover:border-mainColorRed hover:text-mainColorRed'>Добавить в избранное</button>
+						</div>
+						<div class='flex items-center justify-between sm:mt-6'>
+							<div class='hidden sm:flex items-center gap-4 border-2 border-mainColorRed h-max py-1 px-4 w-max rounded-md text-mainColorRed text-2xl sm:gap-2' id='counter'>
+								<button id='buttonCountMinus'><img class='w-10 min-w-[28px]' src="/assets/images/cart/minus.svg" alt=""></button>
+								<input type="text" class="goods-number-input  text-mainColorRed text-2xl text-center w-14" />
+								<button id='buttonCountPlus'><img class='w-10 min-w-[28px]' src="/assets/images/cart/plus.svg" alt=""></button>
+							</div>
+							<div class='text-right hidden sm:flex sm:flex-col'>
+								<p class='text-2xl font-semibold'>80,10 <span>&#8381;</span></p>
+								<s class='text-[#8F8F8F]'>89,00 <span>&#8381;</span></s>
+							</div>
+						</div>
+						<div class='hidden sm:flex mt-4 items-center gap-8'>
 							<button class='border-2 border-mainColorRed rounded-md text-mainColorRed px-7 py-2'>Удалить</button>
 							<button class='border-2 border-transparent bg-mainColorRed rounded-md text-white px-7 py-2 hover:bg-white hover:border-mainColorRed hover:text-mainColorRed'>Добавить в избранное</button>
 						</div>
 					</div>
 					<div class='grid gap-3'>
-						<div class='flex items-center gap-4 border-2 border-mainColorRed h-max py-1 px-4 rounded-md text-mainColorRed text-2xl' id='counter'>
-							<button id='buttonCountMinus'><img class='w-10' src="/assets/images/cart/minus.svg" alt=""></button>
+						<div class='sm:hidden flex items-center gap-4 border-2 border-mainColorRed h-max py-1 px-4 rounded-md text-mainColorRed text-2xl' id='counter'>
+							<button id='buttonCountMinus'><img class='w-10 min-w-[28px]' src="/assets/images/cart/minus.svg" alt=""></button>
 							<input type="text" class="goods-number-input  text-mainColorRed text-2xl text-center w-14" />
-							<button id='buttonCountPlus'><img class='w-10' src="/assets/images/cart/plus.svg" alt=""></button>
+							<button id='buttonCountPlus'><img class='w-10 min-w-[28px]' src="/assets/images/cart/plus.svg" alt=""></button>
 						</div>
-						<div class='text-right'>
+						<div class='text-right sm:hidden'>
 							<p class='text-2xl font-semibold'>80,10 <span>&#8381;</span></p>
 							<s class='text-[#8F8F8F]'>89,00 <span>&#8381;</span></s>
 						</div>
 					</div>
 				</div>
 				<!-- card -->
-				<div class='relative flex items-center justify-between bg-white p-3 rounded-md shadow-md'>
+				<div class='relative flex items-center justify-between bg-white p-3 rounded-md shadow-md sm:flex-col'>
 					<div class=''>
 						<input class='w-8 h-8 absolute top-[-8px]' type="checkbox">
 						<div class='flex'>
 						<img class='mr-2 h-full w-24 shadow-md rounded-md' src="/assets/images/cart/imgProduct.jpg" alt="">
 							<div class='grid gap-y-2 max-w-lg'>
-								<h2 class='text-[#414141] text-2xl'>Комбайн КЗС-1218 «ДЕСНА-ПОЛЕСЬЕ GS12»Комбайн КЗС-1218 «ДЕСНА-ПОЛЕСЬЕ GS12»</h2>
-								<div class='flex gap-6'>
+								<h2 class='text-[#414141] text-2xl sm:text-base'>Комбайн КЗС-1218 «ДЕСНА-ПОЛЕСЬЕ GS12»Комбайн КЗС-1218 «ДЕСНА-ПОЛЕСЬЕ GS12»</h2>
+								<div class='flex gap-6 '>
 									<b>44,50 <span>&#8381;</span></b>
 									<p class='text-[#606060]'>50,50 <span>&#8381;</span> за шт.</p>
 								</div>
 							</div>
 						</div>
-						<div class='flex mt-4 items-center gap-8'>
+						<div class='flex mt-4 items-center gap-8 sm:hidden'>
+							<button class='border-2 border-mainColorRed rounded-md text-mainColorRed px-7 py-2'>Удалить</button>
+							<button class='border-2 border-transparent bg-mainColorRed rounded-md text-white px-7 py-2 hover:bg-white hover:border-mainColorRed hover:text-mainColorRed'>Добавить в избранное</button>
+						</div>
+						<div class='flex items-center justify-between sm:mt-6'>
+							<div class='hidden sm:flex items-center gap-4 border-2 border-mainColorRed h-max py-1 px-4 w-max rounded-md text-mainColorRed text-2xl sm:gap-2' id='counter'>
+								<button id='buttonCountMinus'><img class='w-10 min-w-[28px]' src="/assets/images/cart/minus.svg" alt=""></button>
+								<input type="text" class="goods-number-input  text-mainColorRed text-2xl text-center w-14" />
+								<button id='buttonCountPlus'><img class='w-10 min-w-[28px]' src="/assets/images/cart/plus.svg" alt=""></button>
+							</div>
+							<div class='text-right hidden sm:flex sm:flex-col'>
+								<p class='text-2xl font-semibold'>80,10 <span>&#8381;</span></p>
+								<s class='text-[#8F8F8F]'>89,00 <span>&#8381;</span></s>
+							</div>
+						</div>
+						<div class='hidden sm:flex mt-4 items-center gap-8 '>
 							<button class='border-2 border-mainColorRed rounded-md text-mainColorRed px-7 py-2'>Удалить</button>
 							<button class='border-2 border-transparent bg-mainColorRed rounded-md text-white px-7 py-2 hover:bg-white hover:border-mainColorRed hover:text-mainColorRed'>Добавить в избранное</button>
 						</div>
 					</div>
 					<div class='grid gap-3'>
-						<div class='flex items-center gap-4 border-2 border-mainColorRed h-max py-1 px-4 rounded-md text-mainColorRed text-2xl' id='counter'>
-							<button id='buttonCountMinus'><img class='w-10' src="/assets/images/cart/minus.svg" alt=""></button>
+						<div class='sm:hidden flex items-center gap-4 border-2 border-mainColorRed h-max py-1 px-4 rounded-md text-mainColorRed text-2xl' id='counter'>
+							<button id='buttonCountMinus'><img class='w-10 min-w-[28px]' src="/assets/images/cart/minus.svg" alt=""></button>
 							<input type="text" class="goods-number-input  text-mainColorRed text-2xl text-center w-14" />
-							<button id='buttonCountPlus'><img class='w-10' src="/assets/images/cart/plus.svg" alt=""></button>
+							<button id='buttonCountPlus'><img class='w-10 min-w-[28px]' src="/assets/images/cart/plus.svg" alt=""></button>
 						</div>
-						<div class='text-right'>
+						<div class='text-right sm:hidden'>
 							<p class='text-2xl font-semibold'>80,10 <span>&#8381;</span></p>
 							<s class='text-[#8F8F8F]'>89,00 <span>&#8381;</span></s>
 						</div>
@@ -207,7 +237,7 @@
 						<div class='flex opacity-50'>
 							<img class='mr-2 h-full w-24 shadow-md rounded-md' src="/assets/images/cart/imgProduct.jpg" alt="">
 							<div class='grid gap-y-2 max-w-lg'>
-								<h2 class='text-[#414141] text-2xl'>Комбайн КЗС-1218 «ДЕСНА-ПОЛЕСЬЕ GS12»Комбайн КЗС-1218 «ДЕСНА-ПОЛЕСЬЕ GS12»</h2>
+								<h2 class='text-[#414141] text-2xl sm:text-base'>Комбайн КЗС-1218 «ДЕСНА-ПОЛЕСЬЕ GS12»Комбайн КЗС-1218 «ДЕСНА-ПОЛЕСЬЕ GS12»</h2>
 								<div class='flex gap-6'>
 									<b>44,50 <span>&#8381;</span></b>
 									<p class='text-[#606060]'>50,50 <span>&#8381;</span> за шт.</p>
@@ -218,14 +248,17 @@
 							<button class='border-2 border-mainColorRed rounded-md text-mainColorRed px-7 py-2'>Удалить</button>
 							<button class='border-2 border-transparent bg-mainColorRed rounded-md text-white px-7 py-2 hover:bg-white hover:border-mainColorRed hover:text-mainColorRed'>Добавить в избранное</button>
 						</div>
+						<div class='mt-3 opacity-50 sm:h-max hidden sm:block'>
+							<p class='text-2xl text-[#414141]'>Нет в наличии</p>
+						</div>
 					</div>
-					<div class='mt-3 opacity-50'>
+					<div class='mt-3 opacity-50 sm:hidden'>
 						<p class='text-2xl text-[#414141]'>Нет в наличии</p>
 					</div>
 				</div>
 			</div>
-			<div class='w-80'>
-				<button class='bg-mainColorRed text-white py-3 px-8 rounded-md w-full text-xl'>Оформить заказ</button>
+			<div class='w-80 md:mt-10 md:mb-32 flex flex-col sm:w-full'>
+				<button class='bg-mainColorRed text-white py-3 px-8 rounded-md w-full text-xl order-3 md:mt-4'>Оформить заказ</button>
 				<div>
 					<div class='border-y-2 my-3 py-4 text-[#8F8F8F] text-lg'>
 						<div class='flex items-center justify-between'>
