--- a/pages/orders.html
+++ b/pages/orders.html
@@ -88,7 +88,7 @@
 			</div>
 			<div class='flex items-center gap-8 text-white lg:gap-4 sm:hidden md:hidden'>
 				<ul>
-					<li><a class='grid place-items-center gap-y-2 text-sm' href='favourites.html'><img class='w-7' src="/assets/images/menu/favorites.svg" alt="">Избранное</a></li>
+					<li><a class='grid place-items-center gap-y-2 text-sm' href='favorites.html'><img class='w-7' src="/assets/images/menu/favorites.svg" alt="">Избранное</a></li>
 				</ul>
 				<ul>
 					<li><a class='grid place-items-center gap-y-2 text-sm' href='orders.html'><img class='w-7' src="/assets/images/menu/box.svg" alt="">Заказы</a></li>
@@ -143,7 +143,7 @@
 					<!-- cards -->
 					<div class='grid grid-cols-4 my-8 gap-4'>
 						<!-- card -->
-						<div class='bg-white py-5 px-3 rounded-md border'>
+						<div class='flex flex-col bg-white py-5 px-3 rounded-md border'>
 							<div class='flex items-center justify-between'>
 								<div class='flex gap-1'>
 									<img src="/assets/images/products_cards/shopping-cart.svg" alt="">
@@ -161,10 +161,10 @@
 								<img class='w-6' src="/assets/images/products_cards/star_none.svg" alt="">
 								<img class='w-6' src="/assets/images/products_cards/star_none.svg" alt="">
 							</div>
-							<button class='bg-transparent border-2 border-mainColorRed w-full text-lg text-mainColorRed py-2 rounded-md'>В корзину</button>
+							<button class='bg-transparent border-2 border-mainColorRed w-full text-lg text-mainColorRed py-2 rounded-md mt-auto'>В корзину</button>
 						</div>
 						<!-- card -->
-						<div class='bg-white py-5 px-3 rounded-md border'>
+						<div class='flex flex-col bg-white py-5 px-3 rounded-md border'>
 							<div class='flex items-center justify-between'>
 								<div class='flex gap-1'>
 									<img src="/assets/images/products_cards/shopping-cart.svg" alt="">
@@ -182,10 +182,10 @@
 								<img class='w-6' src="/assets/images/products_cards/star_none.svg" alt="">
 								<img class='w-6' src="/assets/images/products_cards/star_none.svg" alt="">
 							</div>
-							<button class='bg-transparent border-2 border-mainColorRed w-full text-lg text-mainColorRed py-2 rounded-md'>В корзину</button>
+							<button class='bg-transparent border-2 border-mainColorRed w-full text-lg text-mainColorRed py-2 rounded-md mt-auto'>В корзину</button>
 						</div>
 						<!-- card -->
-						<div class='bg-white py-5 px-3 rounded-md border'>
+						<div class='flex flex-col bg-white py-5 px-3 rounded-md border'>
 							<div class='flex items-center justify-between'>
 								<div class='flex gap-1'>
 									<img src="/assets/images/products_cards/shopping-cart.svg" alt="">
@@ -203,10 +203,10 @@
 								<img class='w-6' src="/assets/images/products_cards/star_none.svg" alt="">
 								<img class='w-6' src="/assets/images/products_cards/star_none.svg" alt="">
 							</div>
-							<button class='bg-transparent border-2 border-mainColorRed w-full text-lg text-mainColorRed py-2 rounded-md'>В корзину</button>
+							<button class='bg-transparent border-2 border-mainColorRed w-full text-lg text-mainColorRed py-2 rounded-md mt-auto'>В корзину</button>
 						</div>
 						<!-- card -->
-						<div class='bg-white py-5 px-3 rounded-md border'>
+						<div class='flex flex-col bg-white py-5 px-3 rounded-md border'>
 							<div class='flex items-center justify-between'>
 								<div class='flex gap-1'>
 									<img src="/assets/images/products_cards/shopping-cart.svg" alt="">
@@ -224,7 +224,7 @@
 								<img class='w-6' src="/assets/images/products_cards/star_none.svg" alt="">
 								<img class='w-6' src="/assets/images/products_cards/star_none.svg" alt="">
 							</div>
-							<button class='bg-transparent border-2 border-mainColorRed w-full text-lg text-mainColorRed py-2 rounded-md'>В корзину</button>
+							<button class='bg-transparent border-2 border-mainColorRed w-full text-lg text-mainColorRed py-2 rounded-md mt-auto'>В корзину</button>
 						</div>
 					</div>
 					<button class='flex bg-[#F3F2F1] text-[#515151] px-3 py-2 rounded-md gap-x-3 m-auto'><img src="/assets/images/products_cards/eye.svg" alt="">Посмотреть заказ</button>
@@ -249,7 +249,7 @@
 					<!-- cards -->
 					<div class='grid grid-cols-4 my-7 gap-4'>
 						<!-- card -->
-						<div class='bg-white py-5 px-3 rounded-md border'>
+						<div class='flex flex-col bg-white py-5 px-3 rounded-md border'>
 							<div class='flex items-center justify-between'>
 								<div class='flex gap-1'>
 									<img src="/assets/images/products_cards/shopping-cart.svg" alt="">
@@ -267,10 +267,10 @@
 								<img class='w-6' src="/assets/images/products_cards/star_none.svg" alt="">
 								<img class='w-6' src="/assets/images/products_cards/star_none.svg" alt="">
 							</div>
-							<button class='bg-transparent border-2 border-mainColorRed w-full text-lg text-mainColorRed py-2 rounded-md'>В корзину</button>
+							<button class='bg-transparent border-2 border-mainColorRed w-full text-lg text-mainColorRed py-2 rounded-md mt-auto'>В корзину</button>
 						</div>
 						<!-- card -->
-						<div class='bg-white py-5 px-3 rounded-md border'>
+						<div class='flex flex-col bg-white py-5 px-3 rounded-md border'>
 							<div class='flex items-center justify-between'>
 								<div class='flex gap-1'>
 									<img src="/assets/images/products_cards/shopping-cart.svg" alt="">
@@ -288,10 +288,10 @@
 								<img class='w-6' src="/assets/images/products_cards/star_none.svg" alt="">
 								<img class='w-6' src="/assets/images/products_cards/star_none.svg" alt="">
 							</div>
-							<button class='bg-transparent border-2 border-mainColorRed w-full text-lg text-mainColorRed py-2 rounded-md'>В корзину</button>
+							<button class='bg-transparent border-2 border-mainColorRed w-full text-lg text-mainColorRed py-2 rounded-md mt-auto'>В корзину</button>
 						</div>
 						<!-- card -->
-						<div class='bg-white py-5 px-3 rounded-md border'>
+						<div class='flex flex-col bg-white py-5 px-3 rounded-md border'>
 							<div class='flex items-center justify-between'>
 								<div class='flex gap-1'>
 									<img src="/assets/images/products_cards/shopping-cart.svg" alt="">
@@ -309,10 +309,10 @@
 								<img class='w-6' src="/assets/images/products_cards/star_none.svg" alt="">
 								<img class='w-6' src="/assets/images/products_cards/star_none.svg" alt="">
 							</div>
-							<button class='bg-transparent border-2 border-mainColorRed w-full text-lg text-mainColorRed py-2 rounded-md'>В корзину</button>
+							<button class='bg-transparent border-2 border-mainColorRed w-full text-lg text-mainColorRed py-2 rounded-md mt-auto'>В корзину</button>
 						</div>
 						<!-- card -->
-						<div class='bg-white py-5 px-3 rounded-md border'>
+						<div class='flex flex-col bg-white py-5 px-3 rounded-md border'>
 							<div class='flex items-center justify-between'>
 								<div class='flex gap-1'>
 									<img src="/assets/images/products_cards/shopping-cart.svg" alt="">
@@ -330,7 +330,7 @@
 								<img class='w-6' src="/assets/images/products_cards/star_none.svg" alt="">
 								<img class='w-6' src="/assets/images/products_cards/star_none.svg" alt="">
 							</div>
-							<button class='bg-transparent border-2 border-mainColorRed w-full text-lg text-mainColorRed py-2 rounded-md'>В корзину</button>
+							<button class='bg-transparent border-2 border-mainColorRed w-full text-lg text-mainColorRed py-2 rounded-md mt-auto'>В корзину</button>
 						</div>
 					</div>
 				</div>
@@ -354,7 +354,7 @@
 					<!-- cards -->
 					<div class='grid grid-cols-4 my-7 gap-4'>
 						<!-- card -->
-						<div class='bg-white py-5 px-3 rounded-md border'>
+						<div class='flex flex-col bg-white py-5 px-3 rounded-md border'>
 							<div class='flex items-center justify-between'>
 								<div class='flex gap-1'>
 									<img src="/assets/images/products_cards/shopping-cart.svg" alt="">
@@ -372,10 +372,10 @@
 								<img class='w-6' src="/assets/images/products_cards/star_none.svg" alt="">
 								<img class='w-6' src="/assets/images/products_cards/star_none.svg" alt="">
 							</div>
-							<button class='bg-transparent border-2 border-mainColorRed w-full text-lg text-mainColorRed py-2 rounded-md'>В корзину</button>
+							<button class='bg-transparent border-2 border-mainColorRed w-full text-lg text-mainColorRed py-2 rounded-md mt-auto'>В корзину</button>
 						</div>
 						<!-- card -->
-						<div class='bg-white py-5 px-3 rounded-md border'>
+						<div class='flex flex-col bg-white py-5 px-3 rounded-md border'>
 							<div class='flex items-center justify-between'>
 								<div class='flex gap-1'>
 									<img src="/assets/images/products_cards/shopping-cart.svg" alt="">
@@ -393,10 +393,10 @@
 								<img class='w-6' src="/assets/images/products_cards/star_none.svg" alt="">
 								<img class='w-6' src="/assets/images/products_cards/star_none.svg" alt="">
 							</div>
-							<button class='bg-transparent border-2 border-mainColorRed w-full text-lg text-mainColorRed py-2 rounded-md'>В корзину</button>
+							<button class='bg-transparent border-2 border-mainColorRed w-full text-lg text-mainColorRed py-2 rounded-md mt-auto'>В корзину</button>
 						</div>
 						<!-- card -->
-						<div class='bg-white py-5 px-3 rounded-md border'>
+						<div class='flex flex-col bg-white py-5 px-3 rounded-md border'>
 							<div class='flex items-center justify-between'>
 								<div class='flex gap-1'>
 									<img src="/assets/images/products_cards/shopping-cart.svg" alt="">
@@ -414,10 +414,10 @@
 								<img class='w-6' src="/assets/images/products_cards/star_none.svg" alt="">
 								<img class='w-6' src="/assets/images/products_cards/star_none.svg" alt="">
 							</div>
-							<button class='bg-transparent border-2 border-mainColorRed w-full text-lg text-mainColorRed py-2 rounded-md'>В корзину</button>
+							<button class='bg-transparent border-2 border-mainColorRed w-full text-lg text-mainColorRed py-2 rounded-md mt-auto'>В корзину</button>
 						</div>
 						<!-- card -->
-						<div class='bg-white py-5 px-3 rounded-md border'>
+						<div class='flex flex-col bg-white py-5 px-3 rounded-md border'>
 							<div class='flex items-center justify-between'>
 								<div class='flex gap-1'>
 									<img src="/assets/images/products_cards/shopping-cart.svg" alt="">
@@ -435,7 +435,7 @@
 								<img class='w-6' src="/assets/images/products_cards/star_none.svg" alt="">
 								<img class='w-6' src="/assets/images/products_cards/star_none.svg" alt="">
 							</div>
-							<button class='bg-transparent border-2 border-mainColorRed w-full text-lg text-mainColorRed py-2 rounded-md'>В корзину</button>
+							<button class='bg-transparent border-2 border-mainColorRed w-full text-lg text-mainColorRed py-2 rounded-md mt-auto'>В корзину</button>
 						</div>
 					</div>
 				</div>
@@ -459,7 +459,7 @@
 					<!-- cards -->
 					<div class='grid grid-cols-4 my-7 gap-4'>
 						<!-- card -->
-						<div class='bg-white py-5 px-3 rounded-md border'>
+						<div class='flex flex-col bg-white py-5 px-3 rounded-md border'>
 							<div class='flex items-center justify-between'>
 								<div class='flex gap-1'>
 									<img src="/assets/images/products_cards/shopping-cart.svg" alt="">
@@ -477,10 +477,10 @@
 								<img class='w-6' src="/assets/images/products_cards/star_none.svg" alt="">
 								<img class='w-6' src="/assets/images/products_cards/star_none.svg" alt="">
 							</div>
-							<button class='bg-transparent border-2 border-mainColorRed w-full text-lg text-mainColorRed py-2 rounded-md'>В корзину</button>
+							<button class='bg-transparent border-2 border-mainColorRed w-full text-lg text-mainColorRed py-2 rounded-md mt-auto'>В корзину</button>
 						</div>
 						<!-- card -->
-						<div class='bg-white py-5 px-3 rounded-md border'>
+						<div class='flex flex-col bg-white py-5 px-3 rounded-md border'>
 							<div class='flex items-center justify-between'>
 								<div class='flex gap-1'>
 									<img src="/assets/images/products_cards/shopping-cart.svg" alt="">
@@ -498,10 +498,10 @@
 								<img class='w-6' src="/assets/images/products_cards/star_none.svg" alt="">
 								<img class='w-6' src="/assets/images/products_cards/star_none.svg" alt="">
 							</div>
-							<button class='bg-transparent border-2 border-mainColorRed w-full text-lg text-mainColorRed py-2 rounded-md'>В корзину</button>
+							<button class='bg-transparent border-2 border-mainColorRed w-full text-lg text-mainColorRed py-2 rounded-md mt-auto'>В корзину</button>
 						</div>
 						<!-- card -->
-						<div class='bg-white py-5 px-3 rounded-md border'>
+						<div class='flex flex-col bg-white py-5 px-3 rounded-md border'>
 							<div class='flex items-center justify-between'>
 								<div class='flex gap-1'>
 									<img src="/assets/images/products_cards/shopping-cart.svg" alt="">
@@ -519,10 +519,10 @@
 								<img class='w-6' src="/assets/images/products_cards/star_none.svg" alt="">
 								<img class='w-6' src="/assets/images/products_cards/star_none.svg" alt="">
 							</div>
-							<button class='bg-transparent border-2 border-mainColorRed w-full text-lg text-mainColorRed py-2 rounded-md'>В корзину</button>
+							<button class='bg-transparent border-2 border-mainColorRed w-full text-lg text-mainColorRed py-2 rounded-md mt-auto'>В корзину</button>
 						</div>
 						<!-- card -->
-						<div class='bg-white py-5 px-3 rounded-md border'>
+						<div class='flex flex-col bg-white py-5 px-3 rounded-md border'>
 							<div class='flex items-center justify-between'>
 								<div class='flex gap-1'>
 									<img src="/assets/images/products_cards/shopping-cart.svg" alt="">
@@ -540,7 +540,7 @@
 								<img class='w-6' src="/assets/images/products_cards/star_none.svg" alt="">
 								<img class='w-6' src="/assets/images/products_cards/star_none.svg" alt="">
 							</div>
-							<button class='bg-transparent border-2 border-mainColorRed w-full text-lg text-mainColorRed py-2 rounded-md'>В корзину</button>
+							<button class='bg-transparent border-2 border-mainColorRed w-full text-lg text-mainColorRed py-2 rounded-md mt-auto'>В корзину</button>
 						</div>
 					</div>
 				</div>
